test/scc/pp/errors/035.a
035.t:1:7: error: no macro name given in #ifdef directive